--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
-    <head>
-        <title>KangSeongju's homepage</title>
-    </head>
-    <body>
-        <h1>KangSeongju's homepage</h1>
-    </body>
+<head>
+    <title>KangSeongju's homepage</title>
+</head>
+<body>
+    <h1>KangSeongju's homepage</h1
+</body>
 </html>
