--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <title>KangSeongju's homepage</title>
 </head>
 <body>
-    <h1>KangSeongju's homepage</h1
+    <h1>KangSeongju's homepage</h1>
+    <a href = "http://google.com">구글</a>
+    <a href = "http://seoul.ac.kr">서울과기대</a>
+    <a href = "http://unam.hs.kr">운암고</a>
 </body>
 </html>
