--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
     <h1>KangSeongju's homepage</h1>
     <a href = "http://google.com">구글</a>
-    <a href = "http://seoul.ac.kr">서울과기대</a>
-    <a href = "http://unam.hs.kr">운암고</a>
+    <a href = "http://seoul.ac.kr">서울과기대</a><br/>
+    <a href = "http://unam.hs.kr">운암고</a><br/>
 </body>
 </html>
