--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <h1>KangSeongju's homepage</h1>
-    <a href = "http://google.com">구글</a>
+    <a href = "http://google.com">구글</a><br/>
     <a href = "http://seoul.ac.kr">서울과기대</a><br/>
     <a href = "http://unam.hs.kr">운암고</a><br/>
 </body>
