--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
     <a href = "http://google.com">구글</a><br/>
     <a href = "http://seoul.ac.kr">서울과기대</a><br/>
     <a href = "http://unam.hs.kr">운암고</a><br/>
+    <a href = "http://hello.html">운암고</a><br/>
+    <a href = "http://abc/hi.html">운암고</a><br/>
+    <a href = "http://abc/hello.html">운암고</a><br/>
+
 </body>
 </html>
