--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <a href = "http://seoul.ac.kr">서울과기대</a><br/>
     <a href = "http://unam.hs.kr">운암고</a><br/>
     <a href = "http://hello.html">hello</a><br/>
-    <a href = "http://abc/hi.html"></a>hi<br/>
+    <a href = "http://abc/hi.html">hi</a><br/>
     <a href = "http://abc/hello.html">abc/hi</a><br/>
 
 </body>
