--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <a href = "http://google.com">구글</a><br/>
     <a href = "http://seoul.ac.kr">서울과기대</a><br/>
     <a href = "http://unam.hs.kr">운암고</a><br/>
-    <a href = "http://hello.html">hello</a><br/>
-    <a href = "http://abc/hi.html">hi</a><br/>
-    <a href = "http://abc/hello.html">abc/hi</a><br/>
+    <a href = "hello.html">hello</a><br/>
+    <a href = "abc/hi.html">hi</a><br/>
+    <a href = "abc/hello.html">abc/hi</a><br/>
 
 </body>
 </html>
