--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>KangSeongju's homepage</title>
+    <mata name"viewport"content="width=device-width, initial-scale=1"/>
 </head>
 <body>
     <h1>KangSeongju's homepage</h1>
@@ -10,6 +11,7 @@
     <a href = "hello.html">hello</a><br/>
     <a href = "abc/hi.html">hi</a><br/>
     <a href = "abc/hello.html">abc/hi</a><br/>
+    <a href = "abc/youtube.html">유튜브(/a><br/>
 
 </body>
 </html>
