--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a href = "hello.html">hello</a><br/>
     <a href = "abc/hi.html">hi</a><br/>
     <a href = "abc/hello.html">abc/hi</a><br/>
-    <a href = "abc/youtube.html">유튜브(/a><br/>
+    <a href = "abc/youtube.html">유튜브</a><br/>
 
 </body>
 </html>
