--- a/abc/youtube.html
+++ b/abc/youtube.html
@@ -1,2 +1,1 @@
-<iframe wight = "6560" height = "315"
-src = "https://www.youtube.com/watch?v=o99aQZ62nCQ"></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Fc9fVi-_DWE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
