--- a/sort.html
+++ b/sort.html
@@ -1,12 +1,15 @@
 <html>
 
 <head>
+  <title>KangSeongju's homepage</title>
+  <mata name"viewport"content="width=device-width, initial-scale=1"/>
 </head>
 
 <body>
 <center>
-<h1>정렬 - 내림차순 오름차순</h1>
+  <h1>정렬 - 내림차순 오름차순</h1>
 </center>
+  
 <script>
 var num1
   = prompt("숫자 여러개 입력");
