--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href = "abc/hi.html">hi</a><br/>
     <a href = "abc/hello.html">abc/hi</a><br/>
     <a href = "abc/youtube.html">유튜브</a><br/>
-    <a href = "sort.thml">정렬</a><br/>
+    <a href = "sort.html">정렬</a><br/>
 
 
 </body>
