--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <a href = "abc/hello.html">abc/hi</a><br/>
     <a href = "abc/youtube.html">유튜브</a><br/>
     <a href = "sort.html">정렬</a><br/>
+    <a href = "time.html">스케줄링</a><br/>
 
 
 </body>
