--- a/time.html
+++ b/time.html
@@ -1,5 +1,5 @@
 <head>
-  
+  <mata name"viewport"content="width=device-width, initial-scale=1"/>  
 </head>
 <body>
 <center><button onclick="show()">꾹~</button>
