--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <a href = "abc/youtube.html">유튜브</a><br/>
     <a href = "sort.html">정렬</a><br/>
     <a href = "time.html">스케줄링</a><br/>
+    <a href = "sm.html">슬롯머신</a><br/>
 
 
 </body>
