--- a/sm.html
+++ b/sm.html
@@ -82,7 +82,7 @@ function allstop() {
     num = Math.floor (Math.random() * 10)
     if ( num>5 ) document.images["second"].src = document.images["first"].src 
     num = Math.floor (Math.random() * 10)
-    if ( num>7 ) document.images["third"].src = document.images["second"].src 
+    if ( num>7 ) document.images["third"].src = document.images["first"].src 
    
     tid=setTimeout("runrunrun()",1)
     audio1.pause()
