--- a/sm.html
+++ b/sm.html
@@ -76,7 +76,7 @@ function result() {
 function allstop() {
     clearTimeout(tid)
         if(game==true) {
-        end(1);end(2);end(3); 
+        box1 = false;box2=false;box3=false
         game=false
     }
     num = Math.floor (Math.random() * 10)
